--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/server.js",
-    "dev": "ENABLE_QUOTES=false nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "start": "cross-env ENABLE_QUOTES=true nodemon src/server.js"
   },
   "keywords": [],
   "author": "G. Mert Ozdogan",
@@ -20,9 +20,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
     "morgan": "^1.10.1",
+    "yahoo-finance2": "^2.13.3",
     "zod": "^4.1.7"
   },
   "devDependencies": {
+    "cross-env": "^10.0.0",
     "nodemon": "^3.1.10"
   },
   "type": "module"
