--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
     "preview": "node ./node_modules/vite/bin/vite.js build preview"
   },
   "dependencies": {
+    "@nivo/sankey": "^0.99.0",
     "axios": "^1.12.2",
     "date-fns": "^4.1.0",
+    "html-to-image": "^1.11.13",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1"
