--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@google/genai": "^1.28.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "csv-parse": "^6.1.0",
     "express-session": "^1.18.2",
     "framer-motion": "^12.23.24",
