--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.18.1",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "openai": "^6.8.1",
     "pdf-parse": "^2.4.5",
     "pdfjs-dist": "^5.4.296",
