--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,9 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.18",
-    "react": "18.2.0",
-    "react-native": "0.76.7",
+    "expo": "54.0.2",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
     "expo-status-bar": "~2.0.0",
     "@react-native-async-storage/async-storage": "~2.1.1",
     "@react-navigation/native": "^7.1.0",
