--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,16 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "54.0.2",
-    "react": "19.1.0",
-    "react-native": "0.81.4",
-    "expo-status-bar": "~2.0.0",
     "@react-native-async-storage/async-storage": "~2.1.1",
+    "@react-navigation/bottom-tabs": "^7.7.0",
     "@react-navigation/native": "^7.1.0",
     "@react-navigation/native-stack": "^7.7.0",
-    "@react-navigation/bottom-tabs": "^7.7.0",
-    "react-native-screens": "~4.8.0",
+    "axios": "^1.13.2",
+    "expo": "54.0.2",
+    "expo-status-bar": "~2.0.0",
+    "global": "^4.4.0",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-keyboard-controller": "^1.20.1",
     "react-native-safe-area-context": "4.10.5",
-    "axios": "^1.13.2"
+    "react-native-screens": "~4.8.0"
   }
 }
