--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^7.7.0",
     "axios": "^1.13.2",
     "expo": "54.0.2",
+    "expo-document-picker": "~14.0.8",
     "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~2.0.0",
     "global": "^4.4.0",
