--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~2.1.1",
+    "@react-native-community/datetimepicker": "^8.4.4",
+    "@react-native-community/slider": "^5.0.1",
     "@react-navigation/bottom-tabs": "^7.7.0",
     "@react-navigation/native": "^7.1.0",
     "@react-navigation/native-stack": "^7.7.0",
     "axios": "^1.13.2",
     "expo": "54.0.2",
     "expo-document-picker": "~14.0.8",
+    "expo-file-system": "~19.0.20",
     "expo-image-picker": "~17.0.8",
+    "expo-print": "~15.0.8",
+    "expo-sharing": "~14.0.8",
     "expo-status-bar": "~2.0.0",
     "global": "^4.4.0",
     "react": "19.1.0",
