--- a/mobile/package.json
+++ b/mobile/package.json
@@ -26,6 +26,9 @@
     "global": "^4.4.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-calendars": "^1.1313.0",
+    "react-native-document-picker": "^9.3.1",
+    "react-native-fs": "^2.20.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keyboard-controller": "^1.20.1",
     "react-native-safe-area-context": "4.10.5",
