--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "html-to-image": "^1.11.13",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-native-calendars": "^1.1313.0",
     "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
+    "baseline-browser-mapping": "^2.9.4",
     "eslint": "^9.35.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
