--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "~2.1.1",
     "@react-native-community/datetimepicker": "^8.4.4",
     "@react-native-community/slider": "^5.0.1",
+    "@react-native-ml-kit/text-recognition": "^2.0.0",
     "@react-navigation/bottom-tabs": "^7.7.0",
     "@react-navigation/native": "^7.1.0",
     "@react-navigation/native-stack": "^7.7.0",
