--- a/mobile/package.json
+++ b/mobile/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~2.1.1",
@@ -20,6 +21,7 @@
     "expo": "54.0.2",
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~17.0.10",
+    "expo-dev-client": "~6.0.20",
     "expo-document-picker": "~14.0.8",
     "expo-file-system": "~19.0.20",
     "expo-image-picker": "~17.0.8",
@@ -34,7 +36,11 @@
     "react-native-fs": "^2.20.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keyboard-controller": "^1.20.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "~4.8.0"
+    "react-native-reanimated": "^4.2.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0"
+  },
+  "devDependencies": {
+    "patch-package": "^8.0.1"
   }
 }
