--- a/mobile/package.json
+++ b/mobile/package.json
@@ -22,9 +22,11 @@
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "~17.0.10",
     "expo-dev-client": "~6.0.20",
+    "expo-device": "~8.0.10",
     "expo-document-picker": "~14.0.8",
     "expo-file-system": "~19.0.20",
     "expo-image-picker": "~17.0.8",
+    "expo-notifications": "~0.32.15",
     "expo-print": "~15.0.8",
     "expo-sharing": "~14.0.8",
     "expo-status-bar": "~2.0.0",
