--- a/mobile/package.json
+++ b/mobile/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.13.2",
     "expo": "54.0.2",
     "expo-barcode-scanner": "^13.0.1",
+    "expo-build-properties": "~1.0.10",
     "expo-camera": "~17.0.10",
     "expo-constants": "~18.0.12",
     "expo-dev-client": "~6.0.20",
