--- a/backend/package.json
+++ b/backend/package.json
@@ -10,20 +10,24 @@
     "worker": "node src/workers/pushWorkerEntry.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "bcrypt": "^6.0.0",
     "bullmq": "^5.66.0",
-    "ioredis": "^5.8.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.4",
     "expo-server-sdk": "^4.0.0",
     "express": "^5.1.0",
-    "mongoose": "^8.18.1",
-    "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5",
     "helmet": "^8.1.0",
-    "morgan": "^1.10.1"
+    "ioredis": "^5.8.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.18.1",
+    "morgan": "^1.10.1",
+    "node-cron": "^4.2.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11",
     "concurrently": "^8.2.2",
-    "cross-env": "^10.0.0"
+    "cross-env": "^10.0.0",
+    "nodemon": "^3.1.11"
   },
   "engines": {
     "node": ">=22 <23"
