--- a/mobile/package.json
+++ b/mobile/package.json
@@ -6,43 +6,46 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postprebuild": "node scripts/patch-ios-deployment-target.js"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/slider": "5.0.1",
     "@react-native-ml-kit/text-recognition": "^2.0.0",
-    "@react-navigation/bottom-tabs": "^7.12.0",
-    "@react-navigation/elements": "^2.2.3",
-    "@react-navigation/native": "^7.1.28",
-    "@react-navigation/native-stack": "^7.12.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/elements": "^1.3.30",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.13.2",
-    "expo": "~54.0.33",
+    "expo": "~50.0.20",
     "expo-apple-authentication": "~8.0.8",
+    "expo-build-properties": "~1.0.10",
     "expo-camera": "~17.0.10",
-    "expo-constants": "~18.0.12",
+    "expo-constants": "~18.0.13",
     "expo-dev-client": "~6.0.20",
     "expo-device": "~8.0.10",
     "expo-document-picker": "~14.0.8",
-    "expo-file-system": "~19.0.20",
-    "expo-image-picker": "~17.0.8",
+    "expo-file-system": "~19.0.21",
+    "expo-image-picker": "~17.0.10",
     "expo-notifications": "~0.32.16",
     "expo-print": "~15.0.8",
     "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "memoize-one": "^6.0.0",
-    "react": "19.1.0",
-    "react-native": "0.81.5",
+    "react": "18.2.0",
+    "react-native": "0.73.6",
     "react-native-calendars": "^1.1314.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-screens": "~4.16.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2"
+    "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "^20.1.1",
+    "@react-native-community/cli-platform-ios": "^20.1.1"
   }
 }
