fix(mobile): fix apple sign in failed bugs

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -11,10 +11,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
+      "usesAppleSignIn": true,
       "supportsTablet": true,
       "bundleIdentifier": "com.gokmeroz.nummoria",
       "infoPlist": {
