--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.13.2",
-    "expo": "~50.0.20",
+    "expo": "~54.0.33",
     "expo-apple-authentication": "~8.0.8",
     "expo-build-properties": "~1.0.10",
     "expo-camera": "~17.0.10",
@@ -35,13 +35,14 @@
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "memoize-one": "^6.0.0",
-    "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-calendars": "^1.1314.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
