chore: sync local changes

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "cross-env ENABLE_QUOTES=true node --watch src/server.js",
+    "dev:quotes": "cross-env ENABLE_QUOTES=true node --watch src/server.js",
+    "dev": "cross-env ENABLE_QUOTES=true nodemon src/server.js",
     "worker:dev": "node --watch src/workers/pushWorkerEntry.js",
     "dev:all": "concurrently -k \"npm run dev\" \"npm run worker:dev\"",
     "start": "cross-env ENABLE_QUOTES=true node src/server.js",
@@ -11,21 +12,29 @@
   },
   "dependencies": {
     "@google-cloud/vision": "^5.3.4",
+    "@google/genai": "^1.43.0",
     "@google/generative-ai": "^0.24.1",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.66.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "csv-parse": "^6.1.0",
     "dotenv": "^17.2.4",
     "expo-server-sdk": "^4.0.0",
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
     "ioredis": "^5.8.2",
+    "jose": "^6.1.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
+    "nodemailer": "^8.0.1",
+    "openai": "^6.25.0",
+    "pdf-parse": "^2.4.5",
+    "pdfjs-dist": "^5.4.624",
     "sharp": "^0.34.5",
     "zod": "^4.3.6"
   },
