--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,4 +1,25 @@
+# deps
 node_modules/
+
+# env
 .env
+.env.*
+!.env.example
+
+# logs
+logs/
 *.log
-cookies.txt
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# build output
+dist/
+build/
+coverage/
+
+# OS / editor
+.DS_Store
+.idea/
+.vscode/
