--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,23 +13,26 @@
     "@nivo/sankey": "^0.99.0",
     "axios": "^1.12.2",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.34.3",
     "html-to-image": "^1.11.13",
+    "mongoose": "^9.2.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-native-calendars": "^1.1313.0",
     "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.35.0",
+    "@eslint/js": "^9.39.3",
     "@tailwindcss/vite": "^4.1.13",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
     "baseline-browser-mapping": "^2.9.4",
-    "eslint": "^9.35.0",
+    "eslint": "^9.39.3",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.4.0",
+    "eslint-plugin-react-refresh": "^0.4.26",
+    "globals": "^16.5.0",
     "tailwindcss": "^4.1.13",
     "vite": "^7.1.6"
   }
